--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -28,18 +28,28 @@
 					<key>Name</key>
 					<string>Stacks</string>
 					<key>Version</key>
-					<string>3.6.0</string>
+					<string>3.6.4</string>
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:15Z</date>
+						<date>2018-10-29T15:36:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
+							<key>files/backgroundImage_110402.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1JHGkzn579YB
+								VNnelO/rZQ==
+								</data>
+								<key>Size</key>
+								<integer>7536046</integer>
+							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -50,45 +60,35 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-2c90133-700x398.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WNYrWgw4gMan
-								tiFFTLkLNg==
-								</data>
-								<key>Size</key>
-								<integer>60972</integer>
-							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								yZQqhuEMgia3
+								owVDiEQk8g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>13322</integer>
 							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								kcVxqK0Y23YI
+								Ns11kdYJ6w==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>21714</integer>
 							</dict>
 							<key>files/stacks_page_page56.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HnxPFrZeBeHY
-								aKlBm/jimw==
+								INE1i4AnZLwK
+								+y+AuDdIBA==
 								</data>
 								<key>Size</key>
-								<integer>133874</integer>
+								<integer>146776</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GFx4QBeLjQss
-								fPJgOwYfiw==
+								JhG/MEtGzpvu
+								5sMuCV6pow==
 								</data>
 								<key>Size</key>
-								<integer>60554</integer>
+								<integer>66657</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
