--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -28,18 +28,28 @@
 					<key>Name</key>
 					<string>Stacks</string>
 					<key>Version</key>
-					<string>3.6.0</string>
+					<string>3.6.4</string>
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-20T19:28:42Z</date>
+						<date>2018-10-29T15:36:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
+							<key>files/backgroundImage_110769.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								WOillxvhPLNP
+								OWy1kP69IA==
+								</data>
+								<key>Size</key>
+								<integer>7999201</integer>
+							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -54,161 +64,151 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2Pay0nv4SFnl
-								znr6aJIKwQ==
+								D+xnE6kc8lIE
+								b1KBcd97/A==
 								</data>
 								<key>Size</key>
-								<integer>11772</integer>
+								<integer>11777</integer>
 							</dict>
 							<key>files/stacks-image-2968668-150x150@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ALVF6wWWPquz
-								xm8Y2CAOkw==
+								nZDDRkpmcO0I
+								+NAo+m476A==
 								</data>
 								<key>Size</key>
-								<integer>34884</integer>
-							</dict>
-							<key>files/stacks-image-2c90133-700x398.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WNYrWgw4gMan
-								tiFFTLkLNg==
-								</data>
-								<key>Size</key>
-								<integer>60972</integer>
+								<integer>34905</integer>
 							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								yZQqhuEMgia3
+								owVDiEQk8g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>13322</integer>
 							</dict>
 							<key>files/stacks-image-61fe2fb-148x138.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								hCdR5mkQFPYL
-								cSAiG11kvw==
+								DJgt0jKFDJ4b
+								Fn/odNe+pg==
 								</data>
 								<key>Size</key>
-								<integer>6537</integer>
+								<integer>6526</integer>
 							</dict>
 							<key>files/stacks-image-61fe2fb-148x138@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								m8xE8qQUZt/T
-								2Hf04D/pTw==
+								3UWGr+U5dzYk
+								nhJsZy+SQw==
 								</data>
 								<key>Size</key>
-								<integer>18193</integer>
+								<integer>18305</integer>
 							</dict>
 							<key>files/stacks-image-7d9976e-150x128.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Adm2Va/nN0fC
-								/6z45qI77Q==
+								Wz4B5PSzp5CP
+								ZTzl9L2bsA==
 								</data>
 								<key>Size</key>
-								<integer>20573</integer>
+								<integer>20634</integer>
 							</dict>
 							<key>files/stacks-image-7d9976e-150x128@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								13yn9YtbsV9D
-								O4SKdVfDkg==
+								1ViXyayIaoxU
+								tqymwClHHA==
 								</data>
 								<key>Size</key>
-								<integer>63137</integer>
+								<integer>63491</integer>
 							</dict>
 							<key>files/stacks-image-7e48fa7-148x150.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								LzH3uKX8uTKF
-								kMb6PweJQw==
+								DDw+Vqr/eNhe
+								0tRtnlCqEQ==
 								</data>
 								<key>Size</key>
-								<integer>25723</integer>
+								<integer>25681</integer>
 							</dict>
 							<key>files/stacks-image-7e48fa7-148x150@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ulRvSuax0xFi
-								j1R3/SUVbQ==
+								th9R1aMnNop7
+								6M3i0IkyQw==
 								</data>
 								<key>Size</key>
-								<integer>83792</integer>
+								<integer>83593</integer>
 							</dict>
 							<key>files/stacks-image-8e88332-100x104.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dCg8Ts08xKRv
-								9givCO/izw==
+								HU9N9ocudZ8O
+								ypHw3ik3hA==
 								</data>
 								<key>Size</key>
-								<integer>15267</integer>
+								<integer>15274</integer>
 							</dict>
 							<key>files/stacks-image-8e88332-100x104@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								nROmvmMU9FyR
-								mbY5FokjgA==
+								YE+dgcrhhdU3
+								9lbeQWrQig==
 								</data>
 								<key>Size</key>
-								<integer>50266</integer>
+								<integer>50137</integer>
 							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								kcVxqK0Y23YI
+								Ns11kdYJ6w==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>21714</integer>
 							</dict>
 							<key>files/stacks-image-cc75d0b-150x138.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								b+d1bvr5vIM6
-								ukIHFZGccg==
+								skaUCcqiaV40
+								BjAmCIP0vw==
 								</data>
 								<key>Size</key>
-								<integer>21608</integer>
+								<integer>21531</integer>
 							</dict>
 							<key>files/stacks-image-cc75d0b-150x138@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YyIW5pmPU9Fa
-								uML/DD+rIA==
+								P2WhNfZNh37D
+								+/EldxphRg==
 								</data>
 								<key>Size</key>
-								<integer>67421</integer>
+								<integer>67264</integer>
 							</dict>
 							<key>files/stacks_page_page59.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								SMzFrtkDQNO8
-								ngr19a1BNw==
+								uaW4//+oJjYS
+								OCkAJkKV/A==
 								</data>
 								<key>Size</key>
-								<integer>114125</integer>
+								<integer>127027</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VguzBsdvZ/5Y
-								speBsmGrRQ==
+								stQZ+lMnj6sU
+								JDUrQWum+Q==
 								</data>
 								<key>Size</key>
-								<integer>55271</integer>
+								<integer>61374</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
