--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
@@ -28,18 +28,28 @@
 					<key>Name</key>
 					<string>Stacks</string>
 					<key>Version</key>
-					<string>3.6.0</string>
+					<string>3.6.4</string>
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-20T19:19:27Z</date>
+						<date>2018-10-29T15:36:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
+							<key>files/backgroundImage_109967.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1JHGkzn579YB
+								VNnelO/rZQ==
+								</data>
+								<key>Size</key>
+								<integer>7536046</integer>
+							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -54,11 +64,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5/GBFUFgVQrE
-								kLJbE+5zdg==
+								9rtUmvuU3CEL
+								VPZU5lZSBA==
 								</data>
 								<key>Size</key>
-								<integer>43545</integer>
+								<integer>43469</integer>
 							</dict>
 							<key>files/stacks-image-1118fd8.jpg</key>
 							<dict>
@@ -74,51 +84,41 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								u3v26uHIi/ZN
-								Ej9m1eSAGA==
+								/1yJEGVtgDYC
+								qJpjqOOqSg==
 								</data>
 								<key>Size</key>
-								<integer>37090</integer>
+								<integer>37050</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+UXiwULySkAx
-								/S4n2f4+/w==
+								5HaFH1+IeZ2q
+								+imybGmwWQ==
 								</data>
 								<key>Size</key>
-								<integer>61504</integer>
+								<integer>61496</integer>
 							</dict>
 							<key>files/stacks-image-248de64-1200x776.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								9bJ5af31ToLq
-								s071AM1Pvg==
+								aDwp8v2fYCpM
+								Z+2n5otAww==
 								</data>
 								<key>Size</key>
-								<integer>297644</integer>
+								<integer>297149</integer>
 							</dict>
 							<key>files/stacks-image-28ec906-332x500.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								12n2ZVt1UoMv
-								ca+NC8M9Og==
+								q8MeK0zynaYB
+								QnEg4xgJlg==
 								</data>
 								<key>Size</key>
-								<integer>43571</integer>
-							</dict>
-							<key>files/stacks-image-2c90133-700x398.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WNYrWgw4gMan
-								tiFFTLkLNg==
-								</data>
-								<key>Size</key>
-								<integer>60972</integer>
+								<integer>43537</integer>
 							</dict>
 							<key>files/stacks-image-506ca91.png</key>
 							<dict>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								yZQqhuEMgia3
+								owVDiEQk8g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>13322</integer>
 							</dict>
 							<key>files/stacks-image-6298502.png</key>
 							<dict>
@@ -164,31 +164,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GVZ9KS7rE91A
-								8uem+lkIuw==
+								wOfA8edrkkfM
+								NWK6uRIuRQ==
 								</data>
 								<key>Size</key>
-								<integer>29258</integer>
+								<integer>29250</integer>
 							</dict>
 							<key>files/stacks-image-6db2017-500x376@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZlYW9B62liuJ
-								YtZ8UXJDdg==
+								04KcM5WoEtyv
+								2QNxAt6bEQ==
 								</data>
 								<key>Size</key>
-								<integer>45750</integer>
+								<integer>45733</integer>
 							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								kcVxqK0Y23YI
+								Ns11kdYJ6w==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>21714</integer>
 							</dict>
 							<key>files/stacks-image-9c884d0.jpg</key>
 							<dict>
@@ -204,41 +204,41 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ttDkLBzrSML3
-								poQ9OrZ4ag==
+								KpUrEuwqKPAt
+								oK7fFHwzkA==
 								</data>
 								<key>Size</key>
-								<integer>39531</integer>
+								<integer>39433</integer>
 							</dict>
 							<key>files/stacks-image-ae20feb-500x500@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								JRThUdzkMp3E
-								SoWBl7hh1g==
+								NJMzxw9xUnvT
+								YGI55pTjEA==
 								</data>
 								<key>Size</key>
-								<integer>61696</integer>
+								<integer>61619</integer>
 							</dict>
 							<key>files/stacks-image-ae82c9c-650x406.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								CoOaL7t+irO6
-								VVGp7MrraQ==
+								OaC8UWN1uyLr
+								3npva2pgwQ==
 								</data>
 								<key>Size</key>
-								<integer>73705</integer>
+								<integer>73694</integer>
 							</dict>
 							<key>files/stacks-image-b379a6f-498x498.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								6Q3u+WTJRADR
-								m6V/PGVNpA==
+								NEzKvPBozUaA
+								hXktWHJnDA==
 								</data>
 								<key>Size</key>
-								<integer>53904</integer>
+								<integer>53902</integer>
 							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
@@ -254,31 +254,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5cpdWgCZk7HV
-								ROwHuQNbEg==
+								wfnaH+A1NLQd
+								uQbysTmbZg==
 								</data>
 								<key>Size</key>
-								<integer>29154</integer>
+								<integer>29271</integer>
 							</dict>
 							<key>files/stacks-image-f14500c-500x500.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Vtko8MOtdbaI
-								afH9f+nFEQ==
+								SLiZEYJUyzQg
+								aTtxvYxxIQ==
 								</data>
 								<key>Size</key>
-								<integer>46475</integer>
+								<integer>46330</integer>
 							</dict>
 							<key>files/stacks_page_page53.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4GUbxCgCIz5G
-								yJoj01vjfg==
+								J+denflBZI+1
+								vkOrXPKkaQ==
 								</data>
 								<key>Size</key>
-								<integer>170942</integer>
+								<integer>183844</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -294,11 +294,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FlFXFziWeMrQ
-								3D/J4pyD3Q==
+								Y79Eacvd3FxQ
+								B5tFzTxPmw==
 								</data>
 								<key>Size</key>
-								<integer>102755</integer>
+								<integer>108858</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
