--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T15:51:01Z</date>
+						<date>2018-10-29T16:53:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -294,11 +294,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V8hfJ4RMY0kI
-								OEhrZKCBAw==
+								gd2L9TSL1p3a
+								ESNjf+WYxA==
 								</data>
 								<key>Size</key>
-								<integer>111027</integer>
+								<integer>111011</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
