reduced image size for netsci banner
reduced image size for netsci banner

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6726,7 +6726,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T18:53:26Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6735,11 +6735,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WOillxvhPLNP
-								OWy1kP69IA==
+								Ar4BWTsEDvjZ
+								/u6aUjzT6w==
 								</data>
 								<key>Size</key>
-								<integer>7999201</integer>
+								<integer>1048100</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -6922,7 +6922,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T18:53:26Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6931,11 +6931,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1JHGkzn579YB
-								VNnelO/rZQ==
+								GQHOUzuyjCs9
+								Jfbg60A9OQ==
 								</data>
 								<key>Size</key>
-								<integer>7536046</integer>
+								<integer>700318</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -7218,7 +7218,7 @@
 					<key>page54 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7227,11 +7227,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1JHGkzn579YB
-								VNnelO/rZQ==
+								Ar4BWTsEDvjZ
+								/u6aUjzT6w==
 								</data>
 								<key>Size</key>
-								<integer>7536046</integer>
+								<integer>1048100</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -7314,7 +7314,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T18:53:26Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7323,11 +7323,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WOillxvhPLNP
-								OWy1kP69IA==
+								GQHOUzuyjCs9
+								Jfbg60A9OQ==
 								</data>
 								<key>Size</key>
-								<integer>7999201</integer>
+								<integer>700318</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -7420,7 +7420,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7429,11 +7429,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1JHGkzn579YB
-								VNnelO/rZQ==
+								Ar4BWTsEDvjZ
+								/u6aUjzT6w==
 								</data>
 								<key>Size</key>
-								<integer>7536046</integer>
+								<integer>1048100</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -7506,7 +7506,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T18:53:26Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7515,11 +7515,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1JHGkzn579YB
-								VNnelO/rZQ==
+								GQHOUzuyjCs9
+								Jfbg60A9OQ==
 								</data>
 								<key>Size</key>
-								<integer>7536046</integer>
+								<integer>700318</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -7612,7 +7612,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T18:53:26Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7621,11 +7621,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1JHGkzn579YB
-								VNnelO/rZQ==
+								GQHOUzuyjCs9
+								Jfbg60A9OQ==
 								</data>
 								<key>Size</key>
-								<integer>7536046</integer>
+								<integer>700318</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -7868,7 +7868,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7877,11 +7877,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WOillxvhPLNP
-								OWy1kP69IA==
+								Ar4BWTsEDvjZ
+								/u6aUjzT6w==
 								</data>
 								<key>Size</key>
-								<integer>7999201</integer>
+								<integer>1048100</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -8316,7 +8316,7 @@
 					<key>page61 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8325,11 +8325,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WOillxvhPLNP
-								OWy1kP69IA==
+								GQHOUzuyjCs9
+								Jfbg60A9OQ==
 								</data>
 								<key>Size</key>
-								<integer>7999201</integer>
+								<integer>700318</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -8402,7 +8402,7 @@
 					<key>page63 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8411,11 +8411,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1JHGkzn579YB
-								VNnelO/rZQ==
+								Ar4BWTsEDvjZ
+								/u6aUjzT6w==
 								</data>
 								<key>Size</key>
-								<integer>7536046</integer>
+								<integer>1048100</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -8488,7 +8488,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8497,11 +8497,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1JHGkzn579YB
-								VNnelO/rZQ==
+								Ar4BWTsEDvjZ
+								/u6aUjzT6w==
 								</data>
 								<key>Size</key>
-								<integer>7536046</integer>
+								<integer>1048100</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -8574,7 +8574,7 @@
 					<key>page65 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8583,11 +8583,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WOillxvhPLNP
-								OWy1kP69IA==
+								GQHOUzuyjCs9
+								Jfbg60A9OQ==
 								</data>
 								<key>Size</key>
-								<integer>7999201</integer>
+								<integer>700318</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -8896,7 +8896,7 @@
 					<key>page67 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8905,11 +8905,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WOillxvhPLNP
-								OWy1kP69IA==
+								GQHOUzuyjCs9
+								Jfbg60A9OQ==
 								</data>
 								<key>Size</key>
-								<integer>7999201</integer>
+								<integer>700318</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -9872,7 +9872,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T18:53:26Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9921,11 +9921,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nBc7iH4xWVB4
-								eA2xF+c2aA==
+								QpV1c2RhSoUa
+								VSa4WHpR4A==
 								</data>
 								<key>Size</key>
-								<integer>5756</integer>
+								<integer>4348</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9974,7 +9974,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11013,11 +11013,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X5yG48o2vcNf
-								6t1Vhwhq8Q==
+								g0U7vFpNhv9+
+								FnAoyWykOA==
 								</data>
 								<key>Size</key>
-								<integer>4067</integer>
+								<integer>3364</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11121,7 +11121,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAw8dcnG5+gAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAw8kpvko4gAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -11132,7 +11132,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcDDx1yccWmA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcDDySm+TUSA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
