--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T18:53:26Z</date>
+						<date>2018-10-29T19:08:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WOillxvhPLNP
-								OWy1kP69IA==
+								Ar4BWTsEDvjZ
+								/u6aUjzT6w==
 								</data>
 								<key>Size</key>
-								<integer>7999201</integer>
+								<integer>1048100</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
