--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T19:08:58Z</date>
+						<date>2018-10-29T21:46:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -100,6 +100,16 @@
 								<key>Size</key>
 								<integer>61496</integer>
 							</dict>
+							<key>files/stacks-image-2076f85-326x490.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								BZHvPacWRoQb
+								AzH3SIAEew==
+								</data>
+								<key>Size</key>
+								<integer>19122</integer>
+							</dict>
 							<key>files/stacks-image-28ec906-332x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -159,16 +169,6 @@
 								</data>
 								<key>Size</key>
 								<integer>45733</integer>
-							</dict>
-							<key>files/stacks-image-843a067.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								gvLJWD1G+M0Z
-								v6+xt5Bueg==
-								</data>
-								<key>Size</key>
-								<integer>239632</integer>
 							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
@@ -274,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7RHcHlt4ykkZ
-								OzieRFpTQA==
+								X8qcYaEjO7RC
+								riXVwbO2gA==
 								</data>
 								<key>Size</key>
-								<integer>96148</integer>
+								<integer>96156</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
