--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6922,7 +6922,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-05T15:57:45Z</date>
+						<date>2018-11-05T16:05:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7137,6 +7137,16 @@
 								<key>Size</key>
 								<integer>53902</integer>
 							</dict>
+							<key>files/stacks-image-b90e42d.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7Ov4M+uEO0lh
+								avEtq2w06w==
+								</data>
+								<key>Size</key>
+								<integer>31635</integer>
+							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7181,31 +7191,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+zakg03MNkCH
-								QEMfMWt4Ng==
+								bHU3G/C9ICt4
+								QQnNNVmbuQ==
 								</data>
 								<key>Size</key>
-								<integer>190381</integer>
+								<integer>193128</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								mOnie/oWzn4I
-								mU2Qcy0TOw==
+								4s395qmKJGbE
+								NCXL+M09ag==
 								</data>
 								<key>Size</key>
-								<integer>27299</integer>
+								<integer>27481</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Vt2M9uZtQrM1
-								NsLLQU5kJg==
+								BsZJOzB2ELbq
+								x9QpmyqI4w==
 								</data>
 								<key>Size</key>
-								<integer>115713</integer>
+								<integer>120454</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7622,7 +7632,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-05T15:57:45Z</date>
+						<date>2018-11-05T16:05:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7817,6 +7827,16 @@
 								<key>Size</key>
 								<integer>53902</integer>
 							</dict>
+							<key>files/stacks-image-b90e42d.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7Ov4M+uEO0lh
+								avEtq2w06w==
+								</data>
+								<key>Size</key>
+								<integer>31635</integer>
+							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7851,31 +7871,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wzR+ggESAi45
-								+Zr14xnX3A==
+								UUTUp162ktk6
+								ZRAjGHFCnw==
 								</data>
 								<key>Size</key>
-								<integer>176612</integer>
+								<integer>179359</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								0uB1KkVwT69m
-								IMe9S6RL6Q==
+								LzF4Vo2UArIS
+								/iPN9xolcA==
 								</data>
 								<key>Size</key>
-								<integer>27299</integer>
+								<integer>27481</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								zG6xMPlIQ+Fy
-								++twe24lzA==
+								lAESzTIEIRIB
+								sy64ea5YjQ==
 								</data>
 								<key>Size</key>
-								<integer>99680</integer>
+								<integer>104421</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11121,7 +11141,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAyE/9y4yXgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAyFDnfB7WgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -11132,7 +11152,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcDIT/3Ljx2A
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcDIUOd8IgOA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
