--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-05T15:57:45Z</date>
+						<date>2018-11-05T16:05:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -230,6 +230,16 @@
 								<key>Size</key>
 								<integer>53902</integer>
 							</dict>
+							<key>files/stacks-image-b90e42d.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7Ov4M+uEO0lh
+								avEtq2w06w==
+								</data>
+								<key>Size</key>
+								<integer>31635</integer>
+							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -264,31 +274,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wzR+ggESAi45
-								+Zr14xnX3A==
+								UUTUp162ktk6
+								ZRAjGHFCnw==
 								</data>
 								<key>Size</key>
-								<integer>176612</integer>
+								<integer>179359</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								0uB1KkVwT69m
-								IMe9S6RL6Q==
+								LzF4Vo2UArIS
+								/iPN9xolcA==
 								</data>
 								<key>Size</key>
-								<integer>27299</integer>
+								<integer>27481</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								zG6xMPlIQ+Fy
-								++twe24lzA==
+								lAESzTIEIRIB
+								sy64ea5YjQ==
 								</data>
 								<key>Size</key>
-								<integer>99680</integer>
+								<integer>104421</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
