--- a/vermontcomplexsystems-foundation.rw/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T17:24:31Z</date>
+						<date>2018-11-06T19:14:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -49,16 +49,6 @@
 								</data>
 								<key>Size</key>
 								<integer>234406</integer>
-							</dict>
-							<key>files/small_110125.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								jthzH9c2934x
-								N77LvExAMw==
-								</data>
-								<key>Size</key>
-								<integer>306447</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -94,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0T22U4TI9zZe
-								5TmYmw9CXg==
+								39pK8fCYYCBC
+								ctCTI3W8nA==
 								</data>
 								<key>Size</key>
-								<integer>118764</integer>
+								<integer>109308</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -114,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7PKdyNOaeKM7
-								DSBxXp8uFQ==
+								VHQuxg3bDRZX
+								lEjXFqMRlQ==
 								</data>
 								<key>Size</key>
-								<integer>50969</integer>
+								<integer>44634</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
