added PhD Fellowships t32
added PhD Fellowships t32

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6484,7 +6484,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:14:32Z</date>
+						<date>2018-11-06T19:20:48Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6583,11 +6583,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nuh9DVcgXvXo
-								XsNK2A0D0g==
+								cDrCiufl+4oC
+								FRYaQ0CvyQ==
 								</data>
 								<key>Size</key>
-								<integer>160933</integer>
+								<integer>163015</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -6603,11 +6603,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kwJio2AG+p4k
-								H+hGNLTu/Q==
+								fmsiDMtaDs6s
+								/VVye/sngQ==
 								</data>
 								<key>Size</key>
-								<integer>70716</integer>
+								<integer>73352</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9902,7 +9902,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-05T15:57:45Z</date>
+						<date>2018-11-06T19:20:48Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9951,11 +9951,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QpV1c2RhSoUa
-								VSa4WHpR4A==
+								hXBYP4vYHBjj
+								bboIsziLgw==
 								</data>
 								<key>Size</key>
-								<integer>4348</integer>
+								<integer>4380</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10004,7 +10004,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:14:32Z</date>
+						<date>2018-11-06T19:20:48Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11043,11 +11043,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6gwdfJ+57wLU
-								jrpgPtIeGA==
+								X5yG48o2vcNf
+								6t1Vhwhq8Q==
 								</data>
 								<key>Size</key>
-								<integer>3401</integer>
+								<integer>4067</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11131,8 +11131,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDJD80m
-				duKAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDJEIkV
+				CTmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11142,7 +11142,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDJD80mexyA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDJEIkVDJGA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
