--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:14:32Z</date>
+						<date>2018-11-06T19:20:48Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nuh9DVcgXvXo
-								XsNK2A0D0g==
+								cDrCiufl+4oC
+								FRYaQ0CvyQ==
 								</data>
 								<key>Size</key>
-								<integer>160933</integer>
+								<integer>163015</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kwJio2AG+p4k
-								H+hGNLTu/Q==
+								fmsiDMtaDs6s
+								/VVye/sngQ==
 								</data>
 								<key>Size</key>
-								<integer>70716</integer>
+								<integer>73352</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
